# substrate-telemetry

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CODEOWNERS  Dockerfile  README.md  ROADMAP.md  backend.Dockerfile  docker-compose-build.yml  docker-compose-prod.yml  docker-compose.yml  frontend.Dockerfile  package-lock.json  package.json  tsconfig.json  values-parity.yaml
.github/: labeler.yml
.github/workflows/: backend.yml  backend_build.yml  backend_check.yml  backend_docs.yml  backend_fmt.yml  backend_tests.yml  docker-build.yml  frontend-docker-k8s-ci-cd.yml  frontend.yml  publish-deploy.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.README.md  README.md  package.json  run.sh  shard.Dockerfile  telemetry.Dockerfile  tsconfig.json
backend/common/: Cargo.toml
backend/common/src/: assign_id.rs  byte_size.rs  dense_map.rs  either_sink.rs  flume_recv_stream.rs  http_utils.rs  id_type.rs  internal_messages.rs  lib.rs  log_level.rs  mean_list.rs  most_seen.rs  multi_map_unique.rs  node.rs  node_message.rs  node_types.rs  num_stats.rs  ready_chunks_all.rs  rolling_total.rs  shard.rs  time.rs  types.rs  util.rs  ws_client.rs
backend/common/src/channel/: metered_unbounded.rs  mod.rs
backend/common/src/json/: hash.rs  node_message.rs
backend/common/src/util/: dense_map.rs  null.rs
backend/common/src/ws_client/: connect.rs  mod.rs  on_close.rs  receiver.rs  sender.rs
backend/core/: Cargo.toml
backend/core/src/: aggregator.rs  chain.rs  feed.rs  location.rs  main.rs  node.rs  shard.rs  tracker.rs  types.rs  util.rs
backend/core/src/feed/: connector.rs  mod.rs
backend/core/src/node/: connector.rs  message.rs
backend/core/src/shard/: connector.rs  mod.rs
backend/core/src/util/: dense_map.rs  hash.rs  location.rs  mean_list.rs
backend/funnel/: Cargo.toml
backend/funnel/src/: main.rs  node.rs  util.rs
backend/funnel/src/node/: connector.rs  message.rs
backend/funnel/src/util/: location.rs  mean_list.rs
backend/migrations/: 20210823112311_heartbeats.sql
backend/shard/: Cargo.toml
backend/shard/src/: aggregator.rs  connection.rs  main.rs  node.rs  real_ip.rs
backend/shard/src/json_message/: hash.rs  mod.rs  node_message.rs
backend/shard/src/node/: connector.rs
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs  node.rs  shard.rs  types.rs  util.rs  ws.rs
backend/shared/src/util/: hash.rs
backend/src/: aggregator.rs  aggregator.ts  chain.rs  feed.rs  feed.ts  index.ts  main.rs  message.ts  node.rs  node.ts  node_connector.rs  node_message.rs  types.rs  util.rs  utils.ts
backend/src/feed/: connector.rs
backend/src/node/: connector.rs  message.rs
backend/src/util/: dense_map.rs  hash.rs  location.rs  mean_list.rs  num_stats.rs
backend/telemetry/: Cargo.toml
backend/telemetry/src/: aggregator.rs  feed_message.rs  find_location.rs  main.rs
backend/telemetry/src/aggregator/: aggregator.rs  inner_loop.rs  mod.rs
backend/telemetry/src/state/: chain.rs  feed_message.rs  mod.rs  node.rs  state.rs
backend/telemetry_core/: Cargo.toml  build.rs
backend/telemetry_core/benches/: subscribe.rs  throughput.rs
backend/telemetry_core/src/: feed_message.rs  feed_verifier_message.rs  find_location.rs  main.rs
backend/telemetry_core/src/aggregator/: aggregator.rs  aggregator_set.rs  inner_loop.rs  mod.rs  multimap.rs
backend/telemetry_core/src/state/: chain.rs  chain_stats.rs  counter.rs  mod.rs  node.rs  state.rs
backend/telemetry_core/tests/: basic_tests.rs  e2e_tests.rs  soak_tests.rs
backend/telemetry_shard/: Cargo.toml
backend/telemetry_shard/src/: aggregator.rs  blocked_addrs.rs  connection.rs  main.rs  real_ip.rs
backend/telemetry_shard/src/json_message/: alt_verifier.rs  hash.rs  mod.rs  node_message.rs
backend/test_utils/: Cargo.toml
backend/test_utils/src/: connect_to_servers.rs  contains_matches.rs  fake_telemetry.rs  feed_message_de.rs  lib.rs  test_simple.rs  ws_client.rs
backend/test_utils/src/server/: cargo_run_commands.rs  channels.rs  default_commands.rs  mod.rs  server.rs  utils.rs
backend/test_utils/src/workspace/: commands.rs  mod.rs  start_server.rs
frontend/: .dockerignore  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  Dockerfile.README.md  README.md  env.sh  images.d.ts  jest.config.js  package-lock.json  package.json  setupJest.js  tsconfig.json  tsconfig.test.json  tslint.json  webpack.config.js
frontend/assets/: index.html  mock.image.js  mock.style.js
frontend/declarations/: index.d.ts
frontend/nginx/: default  nginx.conf
frontend/public/: Jdenticon.min.js  env-config.js  index.html
frontend/scripts/: env.sh  start.sh
frontend/src/: AfgHandling.ts  App.css  App.test.tsx  App.tsx  Connection.ts  QFNTheme.css  index.css  index.tsx  registerServiceWorker.ts  state.ts  utils.ts
frontend/test/: App.test.tsx  common.spec.js  common.spec.ts
helm/: Chart.yaml  values.yaml
helm/templates/: .core-service.yaml.swp  NOTES.txt  _helpers.tpl  core-deployment.yaml  core-hpa.yaml  core-ingress.yaml  core-service.yaml  core-servicemonitor.yaml  deployment.yaml  frontend-deployment.yaml  frontend-env-config.yaml  frontend-hpa.yaml  frontend-ingress.yaml  frontend-nginx-configmap.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  shard-deployment.yaml  shard-hpa.yaml  shard-service.yaml
k8s/: telemetry-backend-core.yaml  telemetry-backend-shard.yaml  telemetry-frontend.yaml
scripts/: build-all.sh  build-backend.sh  build-common.sh  build-docker-backend.sh  build-docker-frontend.sh  build-docker-images.sh  build-frontend.sh  builld-backend.sh  deploy.sh  start-backend.sh  start-frontend.sh  test-common.sh  test-frontend.sh  test.sh  travis-backend.sh  travis-frontend.sh
scripts/docker/: build-backend.sh
scripts/travis/: build-all.sh  build-backend.sh  build-frontend.sh
shared/: id.ts  index.ts  iterators.ts
src/: aggregator.ts  index.ts  message.ts  node.ts  nodeId.ts  opaque.ts
terraform/: firewall.tf  main.tf  provider.tf  setup.sh  terraform.tfvars.sample  variables.tf
(+112 files in other folders)
