[package]
name = "telemetry"
version = "0.1.0"
authors = ["Parity Technologies Ltd. <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
actix = "0.8"
actix-web = { git = "https://github.com/maciejhirsz/actix-web" }
actix-web-actors = { git = "https://github.com/maciejhirsz/actix-web" }
actix-http = { git = "https://github.com/maciejhirsz/actix-web" }
# actix-web = "1.0.8"
# actix-web-actors = "1.0.2"
# actix-http = "0.2.10"
bytes = "0.4"
chrono = { version = "0.4", features = ["serde"] }
fnv = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
primitive-types = { version = "0.5.0", features = ["serde"] }
log = "0.4"
simple_logger = "1.3.0"
num-traits = "0.2"
parking_lot = "0.9"
reqwest = "0.9.18"
rustc-hash = "1.0.1"

[profile.release]
lto = true
panic = "abort"

[patch.crates-io]
actix-web = { git = "https://github.com/maciejhirsz/actix-web" }
actix-web-actors = { git = "https://github.com/maciejhirsz/actix-web" }
actix-http = { git = "https://github.com/maciejhirsz/actix-web" }
