[package]
name = "telemetry"
version = "0.2.1"
authors = ["Parity Technologies Ltd. <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
actix = "0.10.0"
actix-web = "3.1.0"
actix-web-actors = "3.0.0"
actix-http = "2.0.0"
bytes = "0.5.6"
chrono = { version = "0.4", features = ["serde"] }
fnv = "1.0.7"
futures = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
primitive-types = { version = "0.7.2", features = ["serde"] }
log = "0.4"
simple_logger = "1.11.0"
num-traits = "0.2"
parking_lot = "0.11"
reqwest = "0.9.18"
rustc-hash = "1.1.0"
clap = "3.0.0-beta.2"

[profile.release]
lto = true
panic = "abort"

[patch.crates-io]
actix-web = { git = "https://github.com/maciejhirsz/actix-web", branch = "no-panic-normalize" }