[package]
name = "common"
version = "0.1.0"
authors = ["Parity Technologies Ltd. <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
bimap = "0.6.1"
bytes = "1.0.1"
fnv = "1.0.7"
futures = "0.3.15"
hex = "0.4.3"
http = "0.2.4"
log = "0.4"
num-traits = "0.2"
pin-project-lite = "0.2.7"
primitive-types = { version = "0.9.0", features = ["serde"] }
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
soketto = "0.6.0"
thiserror = "1.0.24"
tokio = { version = "1.8.2", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }

[dev-dependencies]
bincode = "1.3.3"
