[package]
name = "telemetry"
version = "0.2.1"
authors = ["Parity Technologies Ltd. <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
actix = "0.11.0-beta.2"
actix-web = "4.0.0-beta.3"
actix-web-actors = "4.0.0-beta.2"
actix-http = "3.0.0-beta.3"
bytes = "1"
fnv = "1.0.7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value"] }
primitive-types = { version = "0.7.2", features = ["serde"] }
log = "0.4"
simple_logger = "1.11.0"
num-traits = "0.2"
parking_lot = "0.11"
reqwest = { version = "0.11.1", features = ["json"] }
rustc-hash = "1.1.0"
tokio = "1.2.0"
clap = "3.0.0-beta.2"
