[package]
name = "telemetry"
version = "0.3.0"
authors = ["Parity Technologies Ltd. <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
actix = "0.11.1"
actix-web = { version = "4.0.0-beta.4", default-features = false }
actix-web-actors = "4.0.0-beta.3"
actix-http = "3.0.0-beta.4"
bincode = "1.3.3"
bytes = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }
fnv = "1.0.7"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "1.0.24"
primitive-types = { version = "0.9.0", features = ["serde"] }
log = "0.4"
simple_logger = "1.11.0"
num-traits = "0.2"
parking_lot = "0.11"
reqwest = { version = "0.11.1", features = ["blocking", "json"] }
rustc-hash = "1.1.0"
clap = "3.0.0-beta.2"
ctor = "0.1.20"
