[package]
name = "shard"
version = "0.1.0"
authors = ["Parity Technologies Ltd. <admin@parity.io>"]
edition = "2018"

[dependencies]
actix = "0.11.1"
actix-web = { version = "4.0.0-beta.4", default-features = false }
actix-web-actors = "4.0.0-beta.3"
actix-http = "3.0.0-beta.4"
anyhow = "1.0.40"
bincode = "1.3.3"
bytes = "1.0.1"
clap = "3.0.0-beta.2"
log = "0.4"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
shared = { path = "../shared" }
simple_logger = "1.11.0"
soketto = "0.4.2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
tokio-stream = { version = "0.1", features = ["net"] }
