[package]
name = "shared"
version = "0.1.0"
authors = ["Parity Technologies Ltd. <admin@parity.io>"]
edition = "2018"

[dependencies]
actix = "0.11.1"
actix-web = { version = "4.0.0-beta.4", default-features = false }
actix-web-actors = "4.0.0-beta.3"
actix-http = "3.0.0-beta.4"
bytes = "1.0.1"
fnv = "1.0.7"
hex = "0.4.3"
log = "0.4"
num-traits = "0.2"
primitive-types = { version = "0.9.0", features = ["serde"] }
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "1.0.24"

[dev-dependencies]
bincode = "1.3.3"
