[package]
name = "telemetry_core"
version = "0.1.0"
authors = ["Parity Technologies Ltd. <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.41"
bimap = "0.6.1"
bincode = "1.3.3"
bytes = "1.0.1"
common = { path = "../common" }
futures = "0.3.15"
hex = "0.4.3"
http = "0.2.4"
log = "0.4.14"
once_cell = "1.8.0"
parking_lot = "0.11.1"
primitive-types = { version = "0.9.0", features = ["serde"] }
reqwest = { version = "0.11.4", features = ["json"] }
rustc-hash = "1.1.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
simple_logger = "1.11.0"
smallvec = "1.6.1"
soketto = "0.6.0"
structopt = "0.3.21"
thiserror = "1.0.25"
tokio = { version = "1.7.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
warp = "0.3.1"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["async", "async_tokio"] }
shellwords = "1.1.0"
test_utils = { path = "../test_utils" }

[[bench]]
name = "throughput"
harness = false
