[package]
name = "test_utils"
version = "0.1.0"
authors = ["James Wilson <james@jsdw.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
futures = "0.3.15"
http = "0.2.4"
log = "0.4.14"
serde_json = "1.0.64"
soketto = "0.6.0"
thiserror = "1.0.25"
tokio = { version = "1.10.1", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["full"] }
common = { path = "../common" }
time = { version = "0.3.0", features = ["formatting"] }
flume = "0.10.8"
